idea/testData/checker/codeFragments/startingFromReturn.kt.fragment
<error descr="[RETURN_NOT_ALLOWED] 'return' is not allowed here">return</error> a